<resources>
    <string name="app_name">ImdbExample</string>
    <string name="empty_list">No se encontraron películas</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="page_counter">Page: </string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="language">Language</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="item_poster">item poster</string>
</resources>
